--- a/static_main/css/style.css
+++ b/static_main/css/style.css
@@ -28,7 +28,21 @@ p {
     margin: 0 auto;
     flex-wrap: wrap;
 }
-.logo_img{
+
+.about_us{
+    margin: 50px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.about_us_text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+.main_pic{
     height: 60px;
     width: 80px;
     background-image: url(../../media/images/logo.png);
@@ -80,6 +94,18 @@ p {
     margin: 0 auto;
 }
 
+.about_contacts{
+    font-size: 24px;
+}
+
+.logo_img{
+    /* background-image: url({{}}cat.jpg); */
+    height: 460px;
+    width: 460px;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
 
 .article__item p {
     margin: 0;
@@ -114,12 +140,6 @@ h1{
     flex-wrap: nowrap;
     justify-content: space-between;
     margin: 0 auto;
-    align-items: center;
-}
-
-.main_pic{
-    width: 50%;
-    height: auto;
     align-items: center;
 }
 
