--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -12,7 +12,7 @@
 <body>
     <div class="navBar">
         <div class="logo">
-            <a href="{% url 'homepage' %}"> <img class="logo_img"></img></a>
+            <a href="{% url 'homepage' %}"> <img class="main_pic"></img></a>
         </div>
         <div class="navigate">
             <div class="about_wrapper">
