--- a/articles/templates/articles/article_item.html
+++ b/articles/templates/articles/article_item.html
@@ -4,7 +4,7 @@
     <div class="article-detail">
         <h1>{{ article.title }}</h1>
         <div class="wrapp_info">
-            <img class="main_pic" src="{{article.thumbnail.url}}">
+            <img class="pic_article" src="{{article.thumbnail.url}}">
             <p class ="text">{{ article.body }}</p>
         </div>
     </div>
