--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -3,6 +3,12 @@
 <html lang="en">
 
 <head>
+      <!-- Bootstrap CSS CDN -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+      <!-- Bootstrap Icons CDN -->
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} Default title {% endblock title %} </title>
@@ -21,25 +27,25 @@
                 </a>
             </div>
             <div class="Articels_wrapper">
-                <a href="{% url 'articles' %}">
+                <a href="{% url 'articles:articlesList' %}">
                     <div class="Articels">Articel List</div>
                 </a>
             </div>
             
             <div class="signup">
-                <a href="{% url 'signup' %}">signup</a>
+                <a href="{% url 'accounts:signup' %}">signup</a>
             </div>
 
             {% if user.is_authenticated %}
             <div class="logout_wrapper">
-                <form action="{% url 'logout' %}" method="POST">
+                <form action="{% url 'accounts:logout' %}" method="POST">
                     {% csrf_token %}
                     <button type="submit">Logout</button>
                 </form>
             </div>
             {% else %}
             <div class="login_wrapper">
-                <a href="{% url 'login' %}">Login</a>
+                <a href="{% url 'accounts:login' %}">Login</a>
             </div>
             {% endif %}
 
@@ -47,7 +53,9 @@
     </div>
     {% block content %} {% endblock content %}
 
-
+  
+    <!-- Bootstrap JS Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
