--- a/static_main/css/style.css
+++ b/static_main/css/style.css
@@ -25,9 +25,23 @@ p {
     flex-direction: row;
     align-items: center;
     border-style: hidden;
-    margin: 0 auto;
     flex-wrap: wrap;
+    
+
 }
+.Articels{
+    @media (max-width: 500px) {
+        body {
+          font-size: 12px; /* Размер шрифта для маленьких экранов */
+        }
+      }
+    
+}
+@media (max-width: 500px) {
+    body {
+      font-size: 12px; /* Размер шрифта для маленьких экранов */
+    }
+  }
 
 .about_us{
     margin: 50px;
@@ -35,6 +49,9 @@ p {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    @media (max-width: 600px) {
+        display:block;
+    }
 }
 .about_us_text{
     display: flex;
@@ -49,11 +66,16 @@ p {
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+    @media (max-width: 500px) {
+        height: 30px;
+        width: 40px; 
+    }
 }
 .articles{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap:wrap;
 }
 
 
@@ -75,23 +97,38 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+}
+.nav-item {
+    list-style-type: none;  /* Убирает маркеры */
 }
 
-.signup{
-    margin-left: 30px;
-    margin-right: 30px;
+
+.signup{    
+    margin-left: 5%;
+    margin-right: 5%;
+    @media (min-width: 1000px) {
+    margin-left: 10%;
+    margin-right: 10%; 
+      }
 }
 
 .logout_wrapper{
-    
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 5%;
+    margin-right: 5%;
+    @media (min-width: 1000px) {
+    margin-left: 10%;
+    margin-right: 10%; 
+      }
 }
 
 .login_wrapper{
-    
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 5%;
+    margin-right: 5%;
+    @media (min-width: 1000px) {
+    margin-left: 10%;
+    margin-right: 10%; 
+      }
 }
 
 .article__item {
@@ -103,7 +140,7 @@ p {
     border-radius: 10px;
     border-style: hidden;
     background-color: antiquewhite;
-    margin: 40px;
+    margin: 5%;
     overflow: hidden; /* Скрывает содержимое, выходящее за границы */
     word-wrap: break-word; /* Перенос длинных слов */
     overflow-wrap: break-word; /* Альтернатива для word-wrap */
@@ -117,6 +154,10 @@ p {
 
 .about_contacts{
     font-size: 24px;
+    @media (max-width: 600px) {
+       font-size: 14px;
+
+    }
 }
 
 .logo_img{
@@ -126,6 +167,10 @@ p {
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
+    @media (max-width: 600px) {
+        height: 200px;
+        width: 300px;
+     }
 }
 
 .article__item p {
@@ -162,13 +207,21 @@ h1{
     justify-content: space-between;
     margin: 0 auto;
     align-items: center;
-}
+    @media (max-width: 500px) {
+        padding: 0px;
 
-.about_wrapper{
-    margin-left: 30px;
-    margin-right: 30px;
-
+    }
 }
+/* 
+.about_wrapper{    
+    margin-left: 5%;
+    margin-right: 5%;
+    @media (min-width: 1000px) {
+    margin-left: 10%;
+    margin-right: 10%; 
+      }
+
+} */
 
 .wrapp_info{
     display: flex;
@@ -187,9 +240,27 @@ h1{
     flex-direction: column;
     align-items: center;
 }
-
-
-.Articels_wrapper{
-    margin-left: 30px;
-    margin-right: 30px;
+@media (max-width: 600px) {
+    p{
+   font-size: 14px;
+    }
+    a{
+        font-size: 14px;
+    }
+    
+    li{
+        font-size: 14px;
+    }
+    ul{
+        font-size: 14px;
+    }
 }
+
+/* .Articels_wrapper{
+    margin-left: 5%;
+    margin-right: 5%;
+    @media (min-width: 1000px) {
+    margin-left: 10%;
+    margin-right: 10%; 
+      }
+} */
